* Allow overflow at widgets to prevent clipping popup menus

--- a/src/view/Views/Main/MainView.scss
+++ b/src/view/Views/Main/MainView.scss
@@ -18,11 +18,6 @@
   .widget {
     margin: 0;
     padding: 0 0 20px 0;
-    overflow: hidden;
-  }
-
-  .widget_title {
-    clear: both;
   }
 }
 
